
contrib
======================
* add option for XmlLoggerWithStatus to ignore certain targets (CC-259). Patch by Brad Clarke
* add cross-platform JavaServiceWrapper (CC-87). Submitted by Eric Pugh

build loop
======================

ExecBuilder:
----------------------
* New plug-in for executing a specified command as the build action (CC-317). Submitted by Kevin Lee

JMX interface:
----------------------
* Sort arrays and collections by their index's numeric value (CC-232). Patch by Valdis Rigdon

PropertyFileLabelIncrementer:
----------------------
* New plug-in that returns the label from a properties file (CC-242). Submitted by Eugene Kuleshov

WeblogPublisher:
----------------------
* New plug-in for publishing build results to a weblog (CC-102). Submitted by Lasse Koskela

reporting application
======================

documentation:
----------------------
* new page documenting the customization options: System properties, Context parameters, servlet init parameters and XSLT parameters.

error.jsp:
----------------------
* change call from (GenericServlet.)log(...) to application.log(...) for app servers who implement Servlet without extending GenericServlet, such as WebLogic 8.x. Patch by Carl Lindberg

index.jsp:
----------------------
* cleanup display of page, add banding, one line per project. Submitted by Kevin Lawrence

main.jsp:
----------------------
* add "charset=utf-8" to contentType (CC-176).

CruiseControl Release Notes - 2.4

batch files:
----------------------
* Double quotes around %JAVA_HOME% arguments in classpaths, for JAVA_HOME values with spaces in the paths. (CC-371) Fix by Jeff Jensen

binary release:
----------------------
* cruisecontrol.bat no longer sets ANT_HOME (CC-348).