@@ -16,6 +16,10 @@ ExecBuilder:
 ----------------------
 * New plug-in for executing a specified command as the build action (CC-317). Submitted by Kevin Lee
 
+HTMLEmailPublisher:
+----------------------
+* add option to pass XSLT parameters to the XSL stylesheets used.
+
 JMX interface:
 ----------------------
 * Sort arrays and collections by their index's numeric value (CC-232). Patch by Valdis Rigdon
